pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: woof-web
  namespace: default
spec:
  containers:
    - name: web
      image: bybys123/woof
      ports:
        - name: web
          containerPort: 80
          protocol: TCP
