service.yaml
apiVersion: v1
kind: Service
metadata:
  name: woof-web
spec:
  selector:
    app: woof-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
