ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: woof-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: woof-tls
      hosts:
        - badwoof.monkevicius.xyz
  rules:
  - host: badwoof.monkevicius.xyz
    http:
      paths:
        - path: /
          backend:
            serviceName: woof-web-svc
            servicePort: 80
